@@ -130,6 +130,7 @@ messages, or it can be used as a basic mail-&gt;HTML converter.  </P>
 <li><a name="msgbody" href="msgpgs.html#msgbody">Can I make changes to message formatting on existing archived messages?</a></li>
 <li><a name="msgcomms" href="msgpgs.html#msgcomms">What are those "&lt;!--X-... -->"?</a></li>
 <li><a name="commslegal" href="msgpgs.html#commslegal">Are those "&lt;!--X-... -->" legal comments?</a></li>
+<li><a name="removingmsgfooters" href="msgpgs.html#removingmsgfooters">Can I have footers removed from messages when archived?</a></li>
 </ul>
 </ul>
 <ul>
@@ -173,7 +174,7 @@ messages, or it can be used as a basic mail-&gt;HTML converter.  </P>
 <!-- ===================================================================== -->
 <HR>
 <address>
-$Date: 2003/10/06 22:04:15 $ <br>
+$Date: 2004/05/17 05:05:16 $ <br>
 <img align="top" src="monicon.png" alt="">
 <a href="http://www.mhonarc.org/"
 ><strong>MHonArc</strong></a><br>
